@@ -1,4 +1,4 @@
-# $Id: Makefile,v 1.11 2007-10-03 10:18:31 nicm Exp $
+# $Id: Makefile,v 1.12 2007-10-03 11:26:34 nicm Exp $
 
 .SUFFIXES: .c .o .y .h
 .PHONY: clean
@@ -18,7 +18,8 @@ META?= \002 # C-b
 
 SRCS= tmux.c server.c server-msg.c server-fn.c buffer.c buffer-poll.c status.c \
       xmalloc.c xmalloc-debug.c cmd.c input.c input-keys.c screen.c window.c \
-      session.c local.c log.c client.c client-msg.c client-fn.c op.c op-list.c
+      session.c local.c log.c client.c client-msg.c client-fn.c op.c op-list.c \
+      key-string.c
 
 YACC= yacc -d
 
