@@ -33,6 +33,7 @@
 	IPC is arse-about-face: too much overhead. 8-byte header for each
 	packet... hrm. already scanning output for \e, could add an extra
 	byte to it for message
+- could use bsearch all over the place
 
 -- For 0.1 --------------------------------------------------------------------
 - man page
@@ -48,7 +49,6 @@
 	set status on/off
 	set meta
 	set shell
-	bind key??
 - fix resize (width problems with multiple clients?)
 - handle tmux in tmux (check $TMUX and abort)
 - check for some reqd terminfo caps on startup
